# profiler

./: .gitignore  CMakeLists.txt  main.cpp  test  test_run
console_interface/: user_interface_c.cpp  user_interface_c.h
manager/: manager.cpp  manager.h
metrics/: metrics_collector.cpp  metrics_collector.h  profiler_test
processes/: process_manager.cpp  process_manager.h
test_programm/: test  test.cpp  test_events  test_events.cpp
